# pool-lab-ha-plugin

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
custom_components/pool_lab/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  models.py  number.py  protocol.py  select.py  sensor.py  switch.py
custom_components/pool_lab/brand/: README.md
custom_components/pool_lab/translations/: en.json
docs/: protocol.md
scripts/: generate_icons.py  validate_manifest.py
tests/: __init__.py  conftest.py  test_client.py  test_protocol.py
